Resolve API baseline with all matching environments
Currently the baseline is only resolved against the running target
environment, but this does not work when multiple ones are matching or
there is a platform filter.

This resolves the API baseline against all matching target environments.

(cherry picked from commit f423e6550f2462d808f758f4459eac9d008173c1)